<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- application start -->
    <string name="app_name">WiFi Analyzer</string>
    <!--
       <string name="ad_unit_id">ca-app-pub-3940256099942544/1072772517</string>-->


    <string name="ad_unit_id">ca-app-pub-9192948434013012/8805825486</string>
    <string name="new_rate_dialog_title">Rate Me!</string>
    <string name="new_rate_dialog_never">Never</string>
    <string name="new_rate_dialog_later">Later</string>
    <string name="new_rate_dialog_ok">Rate</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>


    <!-- application end -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="Enable_Loc">Some User reported This is an "issue of Android OS 6(M) and 7(N), WiFi Analyzer does not explicitly required Location Service in order to see WiFi Networks.\n Enable Location Service in order to see WiFi Networks" </string>
    <string name="Enable_Location">Enable Location</string>
    <string name="action_access_points">Access Points</string>
    <string name="action_channel_rating">Channel Rating</string>
    <string name="action_channel_graph">Channel Graph</string>
    <string name="action_time_graph">Time Graph</string>
    <string name="action_channel_available">Available Channels</string>
    <string name="action_vendors">Vendors</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_rate">Rate App</string>

    <string name="button_ok" translatable="false">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="no_data_geo_warning">Make sure that your WiFi Adapter is ON</string>
    <string name="no_data_geo_url" translatable="false">May be Your are not in range of any WiFi Connection</string>

    <string name="channel_rating_best">Best Channels:</string>
    <string name="channel_rating_best_none">None</string>
    <string name="channel_rating_best_alternative">, try alternative WiFi Band</string>
    <string name="channel_rating_heading_rating">Channel Rating</string>
    <string name="channel_rating_heading_number">Channel Number</string>
    <string name="channel_rating_heading_count">Access Point Count</string>
    <string name="channel_short_name">CH</string>
    <string name="channel_frequency_range">Range:</string>

    <string name="graph_channel_axis_x">WiFi Channels</string>
    <string name="graph_time_axis_x">Scan Count</string>
    <string name="graph_axis_y">Signal Strength (dBm)</string>

    <!-- settings start -->
    <string name="start_menu_title">Start</string>
    <string name="start_menu_summary" translatable="false">%s</string>
    <string name="start_menu_key" translatable="false">start_menu</string>

    <string name="country_code_title">Country</string>
    <string name="country_code_summary" translatable="false">%s</string>
    <string name="country_code_key" translatable="false">country_code</string>

    <string name="wifi_band_title">WiFi Band</string>
    <string name="wifi_band_summary" translatable="false">%s</string>
    <string name="wifi_band_key" translatable="false">wifi_band</string>
    <string name="wifi_band_default" translatable="false">0</string>

    <string name="scan_interval_title">Scan Interval</string>
    <string name="scan_interval_summary">%d seconds between each scan</string>
    <string name="scan_interval_key" translatable="false">scan_interval</string>
    <integer name="scan_interval_min" translatable="false">1</integer>
    <integer name="scan_interval_max" translatable="false">30</integer>
    <integer name="scan_interval_default" translatable="false">10</integer>

    <string name="sort_by_title">Sort Access Points By</string>
    <string name="sort_by_summary" translatable="false">%s</string>
    <string name="sort_by_key" translatable="false">sort_by</string>
    <string name="sort_by_default" translatable="false">0</string>

    <string name="group_by_title">Group Access Points By</string>
    <string name="group_by_summary" translatable="false">%s</string>
    <string name="group_by_key" translatable="false">group_by</string>
    <string name="group_by_default" translatable="false">1</string>

    <string name="channel_graph_legend_title">Channel Graph Legend Display</string>
    <string name="channel_graph_legend_summary" translatable="false">%s</string>
    <string name="channel_graph_legend_key" translatable="false">channel_graph_legend</string>
    <string name="channel_graph_legend_default" translatable="false">1</string>

    <string name="time_graph_legend_title">Time Graph Legend Display</string>
    <string name="time_graph_legend_summary" translatable="false">%s</string>
    <string name="time_graph_legend_key" translatable="false">time_graph_legend</string>
    <string name="time_graph_legend_default" translatable="false">1</string>

    <string name="theme_title">Theme</string>
    <string name="theme_summary" translatable="false">%s</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_default" translatable="false">0</string>
    <!-- settings end -->

    <!-- about start -->



    <string name="interface_preferences">Interface</string>
    <string name="links">Links</string>
    <string name="pref_rate_this_app">Rate this app on Google Play</string>
    <string name="pref_send_feedback">Send feedback to developer</string>




<string name="ads_avaalible">No Ads Availiable</string>

    <!-- about end -->

    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>


</resources>
